@@ -18,6 +18,9 @@ pmx 2.7.0 - checked 11apr13
 ps2eps 1.68 - checked 10may12
   http://tm.uka.de/~bless/ps2eps
 
+songs 2.17 - checked 20dec13
+  http://songs.sourceforge.net/
+
 t1utils 1.38 - checked 3oct13
   http://www.lcdf.org/type/
 
