@@ -1,3 +1,7 @@
+2013-12-20  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-pkgs.m4 (kpse_utils_pkgs): Add songs.
+
 2013-12-03  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-pkgs.m4: Move psutils from ../utils/ to ../texk/.
